--- a/exopapers.bib
+++ b/exopapers.bib
@@ -1772,7 +1772,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Diaz14,
+@ARTICLE{Diaz14a,
+   author = {{D{\'{\i}}az}, R.~F. and {Almenara}, J.~M. and {Santerne}, A. and 
+	{Moutou}, C. and {Lethuillier}, A. and {Deleuil}, M.},
+    title = "{PASTIS: Bayesian extrasolar planet validation - I. General framework, models, and performance}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1403.6725},
+ primaryClass = "astro-ph.EP",
+ keywords = {methods: statistical, techniques: photometric, techniques: radial velocities, planetary systems},
+     year = 2014,
+    month = jun,
+   volume = 441,
+    pages = {983-1004},
+      doi = {10.1093/mnras/stu601},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.441..983D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Diaz14b,
    author = {{D{\'{\i}}az}, R.~F. and {Montagnier}, G. and {Leconte}, J. and
 	{Bonomo}, A.~S. and {Deleuil}, M. and {Almenara}, J.~M. and
 	{Barros}, S.~C.~C. and {Bouchy}, F. and {Bruno}, G. and {Damiani}, C. and
@@ -5528,9 +5547,34 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Torres11a,
+   author = {{Torres}, G. and {Fressin}, F. and {Batalha}, N.~M. and {Borucki}, W.~J. and 
+	{Brown}, T.~M. and {Bryson}, S.~T. and {Buchhave}, L.~A. and 
+	{Charbonneau}, D. and {Ciardi}, D.~R. and {Dunham}, E.~W. and 
+	{Fabrycky}, D.~C. and {Ford}, E.~B. and {Gautier}, III, T.~N. and 
+	{Gilliland}, R.~L. and {Holman}, M.~J. and {Howell}, S.~B. and 
+	{Isaacson}, H. and {Jenkins}, J.~M. and {Koch}, D.~G. and {Latham}, D.~W. and 
+	{Lissauer}, J.~J. and {Marcy}, G.~W. and {Monet}, D.~G. and 
+	{Prsa}, A. and {Quinn}, S.~N. and {Ragozzine}, D. and {Rowe}, J.~F. and 
+	{Sasselov}, D.~D. and {Steffen}, J.~H. and {Welsh}, W.~F.},
+    title = "{Modeling Kepler Transit Light Curves as False Positives: Rejection of Blend Scenarios for Kepler-9, and Validation of Kepler-9 d, A Super-earth-size Planet in a Multiple System}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1008.4393},
+ primaryClass = "astro-ph.EP",
+ keywords = {binaries: eclipsing, planetary systems, stars: individual: Kepler-9 KIC 3323887 KOI-377, stars: statistics},
+     year = 2011,
+    month = jan,
+   volume = 727,
+      eid = {24},
+    pages = {24},
+      doi = {10.1088/0004-637X/727/1/24},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...727...24T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
-@ARTICLE{Torres11,
+@ARTICLE{Torres11b,
    author = {{Torres}, G.},
     title = "{Interferometry and the Fundamental Properties of Stars}",
   journal = {ArXiv e-prints},
