--- a/table_bg.tex
+++ b/table_bg.tex
@@ -18,7 +18,7 @@
  201465501  & 176.266111  &  0.003507  &  SDSS &  $7.80 \pm 0.15$\tablenotemark{2}   & $7.90 \pm 0.25$ & 0.36 \\
  201546283  & 171.515265  &  1.229950  &  SDSS/AO &  $2.98 \pm 0.05$\tablenotemark{1}   & $5.87 \pm 0.06$ & 2.31 \\
  201779067  & 168.543908  &  4.986984  &  SDSS &  $5.94 \pm 0.15$\tablenotemark{2}  & $4.21 \pm 0.03$ & 10.56 \\
- 201828749  & 175.645724  &  5.894714  &   AO  &  $2.46 \pm 0.04$\tablenotemark{1}   & $ 2.0 \pm 0.1 $\tablenotemark{3} & 137  \\
+ 201828749  & 175.645724  &  5.894714  &   AO  &  $2.46 \pm 0.04$\tablenotemark{1}   & $ 2.0 \pm 0.1 $\tablenotemark{3} & 137  
 \enddata
 \tablenotetext{1}{Separation from AO imaging}
 \tablenotetext{2}{Separation from SDSS photometry}
