--- a/ms.tex
+++ b/ms.tex
@@ -126,7 +126,6 @@ Brendan~P.~Bowler\altaffilmark{\caltech, \jcpa},
 David~W.~Latham\altaffilmark{\cfa},
 Allyson~Bieryla\altaffilmark{\cfa},
 Andrew~W.~Mann\altaffilmark{\texas, \hjs},
-And Any TRES Team Members We Should Add
 }
 
 
@@ -161,10 +160,10 @@ Recently, \paperit{} presented a list of 36 planet candidates orbiting
 31 stars in \KT\ \Ci.
 In this paper, we present stellar and planetary properties for all systems.
 We combine ground-based seeing limited survey data and
-adaptive optics imaging with a detailed transit analysis scheme to confirm
-\Nvalidated\ as planets and identify \Nfp\ as likely false positives.
+adaptive optics imaging with a detailed transit analysis scheme to validate
+\Nvalidated\ candidates as planets and identify \Nfp\ candidates as likely false positives.
 Of particular interest is EPIC 201912552, a bright (K=8.9) M2 dwarf
-hosting a $2.29 \pm 0.24 R_\odot$ planet with $T_{eq} = 273 \pm 15$ K and an
+hosting a $2.24 \pm 0.25 R_\odot$ planet with $T_{eq} = 271 \pm 16$ K and an
 orbital period of 33 days.
 We also present \texttt{vespa}, a new general-purpose implementation
 of the \citet{Morton12} procedure to calculate false positive probabilities
@@ -180,7 +179,7 @@ for \KT\ candidates.
 The \kep\ telescope \citep{Borucki10} has led to a revolution in stellar and planetary
 astrophysics, with 7305 ``objects of interest'' and 4173 ``planet candidates''
 discovered to date \citep{Borucki11a, Borucki11b, Batalha13, Burke14, Rowe15, Mullaly15}.
-The fidelity of this sample is high, so most of these planet candidates are truly planets
+The fidelity of this sample is high: most of these planet candidates are truly planets
 \citep{Morton11b, Fressin13}.
 The demise of two reaction wheels on the spacecraft led to a repurposing
 of the spacecraft into the \KT\ mission, in which the telescope points at
@@ -189,8 +188,8 @@ In this observing strategy, two axes of motion of the spacecraft are
 controlled by the two remaining reaction wheels, while the roll of the
 spacecraft is balanced with solar radiation pressure and quasiperiodic
 thruster firing.
-The result of this observing strategy is that the targets appear to drift
-at the rate of $\sim 1\arcsec$ hr$^{-1}$, with rapid corrections that occur
+As a result, the detector drifts relative to the sky
+at the rate of $\sim 1\arcsec$ hr$^{-1}$, with rapid corrections 
 approximately once every six hours.
 Over the full duration of each campaign, the targets appear to remain near the
 same location on the detector but both the slow drift and the corrections are
@@ -200,14 +199,14 @@ observable by eye \citep{Barentsen15}.
 photometric variations caused by the star's apparent motion over a poorly-defined flat
 field.
 Worse yet, these variations occur on timescales similar to transit signals, potentially
-masking the observational signature of a planet passing between \kep\ and the host star.
+masking the observational signature of a planet passing between \kep\ and its host star.
 
-There has been considerable effort to recover these signals.
+There has been considerable effort to recover these planetary signals.
 \citet{Vanderburg14} extract aperture photometry and de-correlate with image centroid
 position, ``correcting'' the data to ``remove'' the effects of the spacecraft motion.
 These data were used to confirm the first planet discovered in \KT\ \citep{Vanderburg15}.
 A similar technique was employed by \citet{Armstrong15a} to identify potential eclipsing
-binary systems and to identify a transiting system very near a 3:2 period commensurability
+binary systems and to identify a transiting system near a 3:2 period commensurability
 \citep{Armstrong15b}.
 \citet{Aigrain15} and \citet{Crossfield15} use a Gaussian Process model for the measured
 flux, with pointing measurements as the inputs, and then ``de-trend'' the data with that model.
@@ -219,20 +218,20 @@ Under this strategy, it is implicitly assumed that the systematics are removed p
 while retaining all of the astrophysical signal.
 Of course, it is impossible to perfectly separate the astrophysical and instrumental
 signal, and such a technique is prone to either over-fitting, in which some of the
-astrophysical signal is also removed, or under-fitting, in which some instrumental noise
-remains.
-A better strategy is to simultaneously fit both the signal and the noise, as is commonly
-done in cosmology and, increasingly, in radial velocity searches for planetary systems
+astrophysical signal is also removed, or under-fitting, in which some
+of the instrumental systematics remain.
+A better strategy is to simultaneously fit both the signal and the systematics, as is common
+practice in cosmology and, increasingly, in radial velocity searches for planetary systems
 \citep[e.g.][]{Ferreira00, Boisse11, Haywood14, Grunblatt15}.
 
 \paperit{} simultaneously fit both the systematics and potential planetary transit signals
 in a search for transiting planets.
-The authors of that paper assume that the dominant trends in the observed stellar light
+They assume that the dominant trends in the observed stellar light
 curves are caused by spacecraft motion and are shared by many stars.
 They then run PCA on all stars to measure the dominant modes, modeling each star as a
 linear combination of 150 of these ``eigen light curves'' and a transit signal.
 This method enables fitting without over-fitting, and also permits marginalization over
-uncertainties induced by the noise model.
+uncertainties induced by the systematic model.
 Therefore, any uncertainties in the systematics can be propogated into uncertainties in
 detected planet parameters, instead of assuming the systematics are understood perfectly.
 Using this technique, \paperit{} detect 36 planet candidates orbiting 31 stars in \KT\
@@ -248,7 +247,7 @@ true transiting planets.
 
 In this paper, we present stellar and planetary parameters for each system.
 Given these parameters and the transit data, as well as archival imaging, ground-based
-seeing limited survey data, and adaptive optics imaging, we are able to confirm
+seeing-limited survey data, and adaptive optics imaging, we are able to confirm
 \Nvalidated\ of these systems as transiting planets at the 99\% confidence
 level. We also are able to confirm \Nfp\ of these systems as false positives.
 
@@ -269,6 +268,7 @@ In \textsection6, we summarize and discuss our results.
 
 With the exception of one star in our sample (EPIC 201912552), we do not have
 spectroscopic data with which to characterize the stellar properties.
+Additionally, there are no measured parallaxes for any of these stars.
 Instead, we rely on photometry.
 For each system, we query the VizieR database of astronomical catalogues
 \citep{Ochseinbein00}.
@@ -333,7 +333,8 @@ an implementation of the affine-invariant ensemble sampler of
 for each host star conditioned on the observed
 photometric properties as presented in Table 1.
 We include a prior on stellar metallicity representative of the observed metallicities
-of stars within 1 kpc of the Sun, following the results of \citet{Hayden15}.
+of stars within 1 kpc of the Sun, following the results of \citet{Hayden15}, and 
+only consider stars with masses below $3.7$ $M_\odot$.
 
 Such a scheme enables us to infer the statistical uncertainties on the
 mass, radius, and effective temperature.
@@ -347,7 +348,8 @@ atmospheres, which have been shown to predict near-IR colors that are too blue
 
 In order to try to encapsulate the effect of model uncertainties, we also run
 MCMC chains with photometric errors inflated artificially by a factor of three.
-We provide full chains using both inflated and un-inflated uncertainties,
+We provide full chains using both inflated and un-inflated 
+uncertainties,\footnote{http://www.astro.princeton.edu/~tdm/k2/}
 though in the rest of this work (and in Table 2) we adopt
 the results obtained using the inflated values.
 
@@ -361,7 +363,7 @@ the results obtained using the inflated values.
 \label{Spexobs}
 
 
-A near-infrared spectrum of EPIC 201912552 was obtained using the updated SpeX
+A near-infrared spectrum of EPIC 201912552 was obtained using the upgraded SpeX
 (uSpeX) spectrograph \citep{Rayner03} on the NASA Infrared Telescope Facility
 (IRTF) on January 29 2015 (UT).
 SpeX observations were taking using the short cross-dispersed mode and the
@@ -371,7 +373,7 @@ The target was observed at two positions along the slit to subsequently subtract
 the sky background. Eight spectra were taking following this pattern, which provided
 a final S/N of $>150$ per resolving element.
 The spectrum was flat fielded, extracted, wavelength calibrated, and stacked
-using the \textit{SpeXTool} package \citep{Cushing04}.
+using the \textit{Spextool} package \citep{Cushing04}.
 An A0V-type star was observed immediately after
 the target, which was used to create a telluric correction using the
 \textit{xtellcor} package \citep{Vacca03}.
@@ -379,7 +381,7 @@ the target, which was used to create a telluric correction using the
 An optical spectrum was obtained using the SuperNova Integral Field Spectrograph
 \citep[SNIFS,][]{Aldering02,Lantz04} on the University of Hawai'i
 2.2m telescope on the night of January 30 2015.
-SNIFS provides simultaneous coverage from 3200\AA--9700\,AA\ at a resolution
+SNIFS provides simultaneous coverage from 3200\AA--9700\AA\ at a resolution
 of $\simeq1000$. Final S/N of the spectrum was $>100$ pre resolving element
 in the red ($\sim6000$\AA).
 Details of the SNIFS reduction, including dark, bias, and flat-field corrections,
@@ -504,6 +506,13 @@ period of the planet candidate, once the primary transit is masked out.
 and archival imaging data (discussed in detail below).
 \end{itemize}
 
+Each of these scenarios are astrophysical, caused by one object passing
+in front of another, blocking some fraction of the total light. 
+The calculations here do not include the possibility that each signal 
+is caused by an instrumental artifact in the data or some other 
+astrophysical event, such as stellar activity, masquerading as planet
+transits.
+
 Table 4 summarizes the results of these
 calculations, presenting the relative probability for each candidate
 to be caused by any of three false positive scenarios: an undiluted
@@ -514,6 +523,7 @@ We find that \Nfp\ of the presented candidates FPP $>$90\%;
 these we consider to be likely false positives.
 On the other hand, we find that \Nvalidated\ candidates
 have FPP $<$ 1\%; these we consider to be validated planets.
+Of these, 18 are validated for the first time.
 The remaining \Nlimbo\ candidates have FPPs neither high enough to discard
 nor low enough to securely validate.
 
@@ -526,7 +536,7 @@ We show these transit signals as Fig. \ref{fig:transits}.
 
 \begin{figure*}[htbp]
 \centerline{\includegraphics[width=1.0\textwidth]{f2}}
-\caption{\btmtodo{PLACEHOLDER, UPDATE}.
+\caption{\btmtodo{PLACEHOLDER, UPDATE. Needs transit models}.
 Phase-folded \KT\ photometry for all planet candidates analyzed in 
 this paper.
 Each is the product of a fiducial noise model, in which the median systematic
@@ -535,6 +545,7 @@ The systems which we validate as transiting planets are labeled in
 green. 
 The systems which we confirm as false positive events are labeled in red.
 The systems which we leave as candidates are labeled in black.
+Red curves outline the median transit model for each candidate system.
 }
 \label{fig:transits}
 \end{figure*}
@@ -546,7 +557,7 @@ The systems which we leave as candidates are labeled in black.
 We obtained high resolution images of seven stars with the 
 Palomar High Angular Resolution Observer (PHARO) infrared detector 
 \citep{Hayward01} behind the PALM3000 adaptive optics system \citep{Dekany13}
-at the Palomar 5.1-meter Hale telescope on the nights of 2015 Feb 3 and 4 UT.
+at the Palomar 5.1-meter Hale telescope on the nights of 2015 February 3 and 4 UT.
 Sky conditions were mostly clear with light cirrus and $\approx$1$\farcs$0--1$\farcs$3 seeing
 on both nights.  
 We used the smallest plate scale of 25~mas pix$^{-1}$ which resulted
@@ -579,7 +590,7 @@ Relative photometry of nearby stars is carried out using aperture photometry wit
 an aperture radius of 12~pix (0$\farcs$3).  
 For EPIC~201828749, we also acquired $J$- and $H$-band images.
 Astrometry and photometry is derived separately for each image, and the mean and standard deviation 
-of these measurements is adopted for our final values listed in Table~6.
+of these measurements is adopted for our final values listed in Table~5.
 
 We note that we validate 201828749 as a true transiting planet, despite the presence of this binary
 companion. 
@@ -601,11 +612,12 @@ as a function of orbital separation are given in Fig. \ref{Fig:CC}.
 The main frame for each single system shows the deep, saturated image.
 The inset for each single system shows a shallower, unsaturated image to better
 identify companions at close projected orbital separations.
-For the two systems with imaged companions, EPIC 201546283 and 201828749,
+For the two systems with imaged companions, EPIC 201546283 and 
+EPIC 201828749,
 only unsaturated frames are collected.
-The pixel scale is 0.0252$\arcsec$ per pixel, and each subplot is a square 400 pixels
-on a side. 
-Each inset is a square 100 pixels on a side.
+The pixel scale is $0\farcs0252$ per pixel.
+Each subplot is a square 400 pixels on a side and
+each inset is a square 100 pixels on a side.
 All subplots, including insets, are plotted on the same scale.}
 \label{Fig:AO}
 \end{figure*}
@@ -624,7 +636,7 @@ an eclipsing binary could reside and mimic a transit signal.}
 
 \subsection{Known Background Stars}
 The PHARO AO system has a field of view of 25 arcseconds.
-Each \KT\ pixel is a square of $3.98 \times 3.98$ arcseconds.
+Each \KT\ pixel is a square, $3\farcs98$ on a side.
 A background eclipsing binary within a few \KT\ pixels of our target
 stars could mimic a transit signal inside our aperture while evading detection
 by PHARO.
@@ -635,13 +647,13 @@ To investigate the possibility that such wide companions exist,
 we query the ninth data release of the Sloan Digital Sky Survey
 \citep[SDSS DR9,][]{Ahn12}.
 For each target, we return
-all stars within 12\arcsec with $\Delta r < 8$ relative to each object
+all stars within 12\arcsec\ with $\Delta r < 8$ relative to each object
 of interest.
 Of the 31 stars in our sample, four have such a companion.
 Unlike the original \kep\ field, the field for \KT\ \Ci\ is
 well out of the galactic plane, so the rate of giant, distanct background
 stars is significantly lower.
-We include a list of these potential contaminants as Table 5.
+We include all potential contaminants in Table 5.
 
 
 
@@ -684,17 +696,17 @@ For the stars with AO nondetections, there is still the
 possibility that a background binary could be positioned
 directly behind the target star, evading detection.
 The probability is small, given the $0\farcs1$ diffraction limit
-of P200 at $2\mu$m, but nonzero.
+of the Hale Telescope at $2$ $\mu$m, but nonzero.
 We can rule out the possibility of such chance alignments with
 archival imaging data.
 
 For all targets with AO, we can confirm the planetary nature of the signal
-without this extra step, but we include it for EPIC 201912552 for
-completeness, considering thee additional follow-up this target may warrant.
+without this extra step, but we include it for EPIC 201912552, considering 
+the additional follow-up this target may warrant.
 We download data from the POSS I and II surveys, which imaged
 EPIC 201912552 in 1955 and 1989, respectively.
-This star has a proper motion of $-74 \pm 2$ mas yr$^{-1}$ in RA and
-$-122 \pm 4$ mas yr$^{-1}$ in declination, so it has moved by $8.35\arcsec$
+This star has a proper motion of $-74 \pm 2$ mas yr$^{-1}$ in right ascension
+ and $-122 \pm 4$ mas yr$^{-1}$ in declination, so it has moved by $8\farcs35$
 since the POSS I data were collected.
 As shown in Figure \ref{fig:archival}, we do not detect any targets at the
 present-day location of EPIC 201912552 in either of the POSS surveys.
@@ -717,11 +729,11 @@ By combining present-day seeing-limited photometric survey data,
 adaptive optics imaging, and archival photometry, the only stellar companions
 we would not detect would be those that are gravitationally bound to the target
 star and positioned in their orbits so that their projected separation is
-smaller than the diffraction limit of the P200 telescope.
+smaller than the diffraction limit of the Hale Telescope.
 Such an alignment would require the orbital inclination of the binary to be
 nearly $90^\circ$ and the phase $\varpi + \theta \approx \pi/2$ or $3\pi/2$.
 While we cannot fully rule out this possibility, such an alignment is unlikely
-to occur, and highly unlikely to cause enough dilution to call the planetary
+to occur and unable to cause enough dilution to call the planetary
 nature of this signal into question.
 
 
@@ -729,7 +741,7 @@ nature of this signal into question.
 
 \subsection{TRES Radial Velocities}
 
-We observed EPIC 201912552 on (all UT) February 04 2015 and February 24 2015
+We observed EPIC 201912552 on 2015 February 04 and 25 UT
 with the Tillinghast Reflector Echelle
 Spectrograph (TRES) on the 1.5 m Tillinghast Reflector at the Fred L.
 Whipple Observatory.
@@ -748,17 +760,19 @@ We selected 19 echelle orders in the analysis, being careful to reject
 orders with telluric absorption lines, fringing in the far red and those
 with very low SNR in the blue.
 
-The two observed spectra have RVs that differ by $47.1 \pm 41.9$ m s$^{-1}$.
-A deviation at this magnitude can only be explained by the presence of
-a planetary system and instrumental noise, eliminating the possibility the
-transiting planet is actually a false positive.
+The two observed spectra have RVs that differ by $47 \pm 42$ m s$^{-1}$.
+If the RVs were caused by a stellar companion, the RV shift between these
+observations would be on the order of km s$^{-1}$.
+Therefore, the transiting object must be planetary in nature.
+
 
 
 
 \section{Potentially Interesting Systems}
 \subsection{A Mini-Neptune with Earthlike Insolation}
 
-Of particular interest is EPIC 201912552.
+The planet orbiting EPIC 201912552 may be an interesting target for 
+atmospheric studies of transiting exoplanets.
 
 By combining archival and modern seeing-limited data with adaptive optics
 imaging, we can exclude the possibility these transit events are caused by
@@ -774,12 +788,13 @@ This star is only 0.1 magnitudes fainter in $K$ than GJ\,1214
 \citep{Charbonneau09}.
 Due to the relative brightness of the host star, this target is likely
 to become a prime target for atmospheric characterization studies
-and is ideal as a target for future space-based missions such as JWST.
+and is ideal as a target for future space-based missions such as 
+\textit{JWST}.
 
 Unlike GJ\,1214b, EPIC 201912552b is not highly irradiated.
-Instead, it is at an reduced semimajor axis \ars$ = 83.2 \pm 9.1$.
-Its equilibrium temperature is then, assuming zero albedo, $T_{eq} = 273 \pm 15$
-K, meaning its bulk insolation is $131 \pm 30$ percent that of the Earth's.
+Instead, it is at a reduced semimajor axis \ars$ = 84.3 \pm 9.5$.
+Its equilibrium temperature is then, assuming zero albedo, $T_{eq} = 271 \pm 16$
+K, meaning its bulk insolation is $128 \pm 28$ percent that of the Earth's.
 Although the planet is likely too large to be rocky \citep{Rogers14},
 its atmosphere is likely to be the focus of many future observations, providing
 a cool analogue to the highly irradiated planets of a similar size found by
@@ -790,7 +805,7 @@ a cool analogue to the highly irradiated planets of a similar size found by
 
 EPIC 201569483 was originally listed in \paperit\ as a planet candidate.
 The transit events have a depth of approximately 7\%.
-In this work, we conclude this system is more likely than not a false
+In this work, we conclude this system is likely a false
 positive, with an FPP of 0.560.
 The most likely scenario is that of an eclipsing binary, which would
 not be surprising given the transit depth.
@@ -807,16 +822,21 @@ outlining four physical reasons why these anomalies may occur.
 As those authors explain, period-matching candidates can be the result of direct PRF
 contamination, antipodal reflection across the Schmidt telescope, CCD crosstalk
 across a \kep\ module, or ``column anomalies'' across one column of the CCD.
+Typically, the instrumental false positive event appears considerably shallower than the 
+true astrophysical event.
 
 EPIC 201555883 is a unique case in that it does not appear to fall under any of these
 cases. It falls on module 23, while EPIC 201569483 is on module 8, neither 180 degrees
-away from or on the same column as this candidate.
+away from nor on the same column as this candidate.
 Moreover, there is not any evidence of a mechanism that could cause a third star to
 induce both the appearance of a $7\%$ eclipse on one module and an additional
-transit event on a different module.
+anomalous transit event on a different module.
 
 Formally, our false positive validation scheme gives a FPP of $9.5 \times 10^{-4}$,
 reaching our threshold for planet validation.
+Since \texttt{vespa} does not account for the possibility of instrumental artifacts
+in the data, this number represents only the \textit{astrophysical} false positive
+probability.
 In this case, given the period matching between the two events, we refrain from
 declaring this system a planet.
 However, since we cannot explain how such a false positive would occur as a result
@@ -865,14 +885,14 @@ can be followed up from the ground or with future space-based observatories such
 Of our sample, two systems orbit stars with $K < 9$: EPIC 201367065 \citep{Crossfield15} and
 EPIC 201912552.
 An additional four targets orbit stars with $K <10$.
-These targets are ideal for ground-based followup, and may be useful targets for Spitzer and
+These targets are ideal for ground-based followup and may be useful targets for Spitzer and
 JWST to probe planetary atmospheres.
 
 \section{Results and Discussion}
 
 We have presented stellar parameters for all planet candidates systems observed by
 \paperit, validating \Nvalidated\ of the 36 candidates as bona fide planets and
-\Nfp\ as bona fide false positives.
+\Nfp\ as false positives.
 Of these planets, 4 have been previously validated in other works, while 17 are
 validated here for the first time.
 
@@ -901,8 +921,8 @@ nature of the observed transit signal around this target.
 
 The planets we confirm in this paper, like the planets found in the original \kep\ mission,
 span a wide range of parameter space.
-They are at distances ranging from $34$ to $500$ pc, have radii ranging from $1.3$ to
-$5.3 R_\odot$, and orbital periods ranging from 5.0 to 50.3 days.
+They are at distances ranging from $34$ to $700$ pc, have radii ranging from $1.3$ to
+5.3 $R_\oplus$, and orbit with periods ranging from 5.0 to 50.3 days.
 Like the original mission, we find significantly more small planets than large planets.
 
 Unlike the original mission, however, we find that nearly all of our confirmed planets
@@ -910,14 +930,13 @@ are around stars less massive than the Sun.
 This difference is a result of both the \Ci\ field and the target selection process.
 \Ci\ is at a significantly higher galactic latitude than the original \kep\ mission,
 meaning there is a much lower number density of targets at large distances.
-A magnitude limited survey pointed in this direction would then have much in
-common with a volume limited survey near the galactic plane, as massive stars
-at kiloparsec distances are relatively unlikely likely to exist.
-Therefore, the pool of targets that could be selected for \Ci\ contains a larger
+As massive stars
+at kiloparsec distances are relatively less likely to exist in \Ci\ than near the
+galactic plane, the pool of targets that could be selected for \Ci\ contains a larger
 fraction of subsolar stars.
 
 Low-mass stars, particularly M dwarfs, are also a specific focus of the \KT\ mission.
-One of the primary goals of the Kepler mission was to ``Determine the abundance of
+One of the primary goals of the \kep\ mission was to ``determine the abundance of
 terrestrial and larger planets in or near the habitable zone of a wide variety of spectral
 types of stars'' \citep{Batalha13} However, $\sim70\%$ of Kepler's target stars had
 masses within 20\%
@@ -931,7 +950,6 @@ Based on these plans, we expect that \KT\ will detect hundreds of planets during
 lifetime, with the majority being mini-Neptunes and super-Earths around stars
 less massive than the Sun.
 
-\anytodo{Does anyone feel we should include anything else in the discussion?}
 
 
 
