--- a/table_planets.tex
+++ b/table_planets.tex
@@ -1,13 +1,12 @@
 
 \clearpage
 %\LongTables
-\begin{deluxetable*}{lcccccc}
+\begin{deluxetable*}{lccccc}
 \tablewidth{0pt}
 \tabletypesize{\scriptsize}
 \tablecaption{Planet Properties for all Objects of Interest \label{Tab:Planets}}
 \tablehead{
-\colhead{EPIC} &
-\colhead{Cand. Num.} &
+\colhead{Candidate} &
 \colhead{Period (days)} &
 \colhead{Radius ($R_\oplus$)} &
 \colhead{$a/R_\star$} &
@@ -15,38 +14,38 @@
 \colhead{$T_\mathrm{eq}$ (K)}
 }
 \startdata
-$201208431$ & $1$ & $10.00411 \pm {0.00163}$ & $2.33 \pm {0.26}$ & $27.68 \pm {0.94}$ & $0.0780 \pm {0.0016}$ & $562 \pm {14} $ \\
-$201257461$ & $1$ & $50.26775 \pm {0.00734}$ & $6.05 \pm {3.52}$ & $79.98 \pm {4.33}$ & $0.2321 \pm {0.0064}$ & $381 \pm {12} $ \\
-$201295312$ & $1$ & $5.65621 \pm {0.00075}$ & $1.95 \pm {0.26}$ & $13.43 \pm {1.16}$ & $0.0629 \pm {0.0015}$ & $1150 \pm {55} $ \\
-$201338508$ & $1$ & $10.93271 \pm {0.00200}$ & $2.14 \pm {0.38}$ & $30.93 \pm {1.66}$ & $0.0804 \pm {0.0024}$ & $525 \pm {21} $ \\
-$201338508$ & $2$ & $5.73499 \pm {0.00059}$ & $2.03 \pm {0.24}$ & $20.12 \pm {1.08}$ & $0.0523 \pm {0.0016}$ & $652 \pm {26} $ \\
-$201367065$ & $1$ & $10.05429 \pm {0.00033}$ & $2.12 \pm {0.22}$ & $30.17 \pm {1.57}$ & $0.0749 \pm {0.0020}$ & $508 \pm {17} $ \\
-$201367065$ & $2$ & $24.64686 \pm {0.00147}$ & $1.60 \pm {0.15}$ & $54.85 \pm {2.86}$ & $0.1362 \pm {0.0036}$ & $377 \pm {13} $ \\
-$201384232$ & $1$ & $30.93716 \pm {0.00428}$ & $2.68 \pm {0.31}$ & $44.08 \pm {3.92}$ & $0.1911 \pm {0.0048}$ & $616 \pm {31} $ \\
-$201393098$ & $1$ & $28.68077 \pm {0.01250}$ & $2.34 \pm {0.48}$ & $43.14 \pm {3.07}$ & $0.1808 \pm {0.0041}$ & $614 \pm {25} $ \\
-$201403446$ & $1$ & $19.15379 \pm {0.00565}$ & $1.91 \pm {0.35}$ & $28.06 \pm {3.72}$ & $0.1447 \pm {0.0052}$ & $852 \pm {56} $ \\
-$201445392$ & $1$ & $10.35264 \pm {0.00116}$ & $2.72 \pm {0.47}$ & $26.33 \pm {1.37}$ & $0.0837 \pm {0.0024}$ & $663 \pm {21} $ \\
-$201445392$ & $2$ & $5.06442 \pm {0.00065}$ & $2.17 \pm {0.38}$ & $16.34 \pm {0.85}$ & $0.0520 \pm {0.0015}$ & $842 \pm {26} $ \\
-$201465501$ & $1$ & $18.44878 \pm {0.00143}$ & $1.74 \pm {0.63}$ & $71.01 \pm {14.29}$ & $0.0885 \pm {0.0104}$ & $293 \pm {30} $ \\
-$201546283$ & $1$ & $6.77133 \pm {0.00011}$ & $4.11 \pm {0.38}$ & $18.38 \pm {1.12}$ & $0.0658 \pm {0.0018}$ & $873 \pm {28} $ \\
-$201549860$ & $1$ & $5.60822 \pm {0.00057}$ & $2.13 \pm {0.44}$ & $17.83 \pm {0.61}$ & $0.0548 \pm {0.0012}$ & $750 \pm {17} $ \\
-$201555883$ & $1$ & $5.79658 \pm {0.00023}$ & $3.75 \pm {0.56}$ & $20.10 \pm {1.06}$ & $0.0530 \pm {0.0015}$ & $694 \pm {24} $ \\
-$201565013$ & $1$ & $8.63811 \pm {0.00023}$ & $12.15 \pm {3.91}$ & $28.87 \pm {2.84}$ & $0.0660 \pm {0.0033}$ & $523 \pm {40} $ \\
-$201569483$ & $1$ & $5.79690 \pm {0.00001}$ & $34.10 \pm {5.09}$ & $16.89 \pm {0.85}$ & $0.0588 \pm {0.0015}$ & $880 \pm {25} $ \\
-$201577035$ & $1$ & $19.30622 \pm {0.00136}$ & $3.58 \pm {0.61}$ & $35.11 \pm {5.34}$ & $0.1365 \pm {0.0035}$ & $668 \pm {49} $ \\
-$201596316$ & $1$ & $39.84348 \pm {0.01392}$ & $2.23 \pm {0.38}$ & $61.36 \pm {4.19}$ & $0.2126 \pm {0.0072}$ & $475 \pm {19} $ \\
-$201613023$ & $1$ & $8.28186 \pm {0.00060}$ & $2.03 \pm {0.24}$ & $18.99 \pm {1.60}$ & $0.0786 \pm {0.0020}$ & $925 \pm {38} $ \\
-$201617985$ & $1$ & $7.28210 \pm {0.00076}$ & $1.78 \pm {0.58}$ & $27.38 \pm {2.14}$ & $0.0573 \pm {0.0022}$ & $497 \pm {24} $ \\
-$201629650$ & $1$ & $40.04833 \pm {0.02111}$ & $2.12 \pm {0.52}$ & $59.20 \pm {4.08}$ & $0.2153 \pm {0.0059}$ & $513 \pm {19} $ \\
-$201635569$ & $1$ & $8.36807 \pm {0.00019}$ & $5.13 \pm {0.77}$ & $29.29 \pm {2.48}$ & $0.0636 \pm {0.0025}$ & $502 \pm {27} $ \\
-$201649426$ & $1$ & $27.77044 \pm {0.00006}$ & $30.03 \pm {5.78}$ & $56.87 \pm {4.97}$ & $0.1523 \pm {0.0063}$ & $440 \pm {22} $ \\
-$201702477$ & $1$ & $40.73649 \pm {0.00245}$ & $7.66 \pm {0.81}$ & $55.99 \pm {3.67}$ & $0.2239 \pm {0.0051}$ & $526 \pm {19} $ \\
-$201736247$ & $1$ & $11.81037 \pm {0.00170}$ & $2.82 \pm {0.32}$ & $27.44 \pm {1.42}$ & $0.0936 \pm {0.0023}$ & $690 \pm {21} $ \\
-$201779067$ & $1$ & $27.24292 \pm {0.00013}$ & $38.51 \pm {8.27}$ & $33.03 \pm {5.39}$ & $0.1784 \pm {0.0053}$ & $746 \pm {58} $ \\
-$201828749$ & $1$ & $33.50924 \pm {0.00228}$ & $2.47 \pm {0.81}$ & $57.87 \pm {18.68}$ & $0.1903 \pm {0.0066}$ & $519 \pm {62} $ \\
-$201855371$ & $1$ & $17.97149 \pm {0.00164}$ & $2.19 \pm {0.23}$ & $40.14 \pm {1.60}$ & $0.1169 \pm {0.0028}$ & $478 \pm {13} $ \\
-$201912552$\tablenotemark{1} & $1$ & $32.94139 \pm {0.00292}$ & $2.24 \pm {0.25}$ & $84.27 \pm {9.54}$ & $0.1491 \pm {0.0053}$ & $271 \pm {16} $ \\
-$201929294$ & $1$ & $5.0084 \pm {0.0001}$ & $8.77 \pm {0.70}$ & $16.11 \pm {0.87}$ & $0.0516 \pm {0.0015}$ & $844 \pm {24} $
+$201208431.01$ & $10.00411 \pm {0.00163}$ & $2.33 \pm {0.26}$ & $27.68 \pm {0.94}$ & $0.0780 \pm {0.0016}$ & $562 \pm {14} $ \\
+$201257461.01$ & $50.26775 \pm {0.00734}$ & $6.05 \pm {3.52}$ & $79.98 \pm {4.33}$ & $0.2321 \pm {0.0064}$ & $381 \pm {12} $ \\
+$201295312.01$ & $5.65621 \pm {0.00075}$ & $1.95 \pm {0.26}$ & $13.43 \pm {1.16}$ & $0.0629 \pm {0.0015}$ & $1150 \pm {55} $ \\
+$201338508.01$ & $10.93271 \pm {0.00200}$ & $2.14 \pm {0.38}$ & $30.93 \pm {1.66}$ & $0.0804 \pm {0.0024}$ & $525 \pm {21} $ \\
+$201338508.02$ & $5.73499 \pm {0.00059}$ & $2.03 \pm {0.24}$ & $20.12 \pm {1.08}$ & $0.0523 \pm {0.0016}$ & $652 \pm {26} $ \\
+$201367065.01$ & $10.05429 \pm {0.00033}$ & $2.12 \pm {0.22}$ & $30.17 \pm {1.57}$ & $0.0749 \pm {0.0020}$ & $508 \pm {17} $ \\
+$201367065.02$ & $24.64686 \pm {0.00147}$ & $1.60 \pm {0.15}$ & $54.85 \pm {2.86}$ & $0.1362 \pm {0.0036}$ & $377 \pm {13} $ \\
+$201384232.01$ & $30.93716 \pm {0.00428}$ & $2.68 \pm {0.31}$ & $44.08 \pm {3.92}$ & $0.1911 \pm {0.0048}$ & $616 \pm {31} $ \\
+$201393098.01$ & $28.68077 \pm {0.01250}$ & $2.34 \pm {0.48}$ & $43.14 \pm {3.07}$ & $0.1808 \pm {0.0041}$ & $614 \pm {25} $ \\
+$201403446.01$ & $19.15379 \pm {0.00565}$ & $1.91 \pm {0.35}$ & $28.06 \pm {3.72}$ & $0.1447 \pm {0.0052}$ & $852 \pm {56} $ \\
+$201445392.01$ & $10.35264 \pm {0.00116}$ & $2.72 \pm {0.47}$ & $26.33 \pm {1.37}$ & $0.0837 \pm {0.0024}$ & $663 \pm {21} $ \\
+$201445392.02$ & $5.06442 \pm {0.00065}$ & $2.17 \pm {0.38}$ & $16.34 \pm {0.85}$ & $0.0520 \pm {0.0015}$ & $842 \pm {26} $ \\
+$201465501.01$ & $18.44878 \pm {0.00143}$ & $1.74 \pm {0.63}$ & $71.01 \pm {14.29}$ & $0.0885 \pm {0.0104}$ & $293 \pm {30} $ \\
+$201546283.01$ & $6.77133 \pm {0.00011}$ & $4.11 \pm {0.38}$ & $18.38 \pm {1.12}$ & $0.0658 \pm {0.0018}$ & $873 \pm {28} $ \\
+$201549860.01$ & $5.60822 \pm {0.00057}$ & $2.13 \pm {0.44}$ & $17.83 \pm {0.61}$ & $0.0548 \pm {0.0012}$ & $750 \pm {17} $ \\
+$201555883.01$ & $5.79658 \pm {0.00023}$ & $3.75 \pm {0.56}$ & $20.10 \pm {1.06}$ & $0.0530 \pm {0.0015}$ & $694 \pm {24} $ \\
+$201565013.01$ & $8.63811 \pm {0.00023}$ & $12.15 \pm {3.91}$ & $28.87 \pm {2.84}$ & $0.0660 \pm {0.0033}$ & $523 \pm {40} $ \\
+$201569483.01$ & $5.79690 \pm {0.00001}$ & $34.10 \pm {5.09}$ & $16.89 \pm {0.85}$ & $0.0588 \pm {0.0015}$ & $880 \pm {25} $ \\
+$201577035.01$ & $19.30622 \pm {0.00136}$ & $3.58 \pm {0.61}$ & $35.11 \pm {5.34}$ & $0.1365 \pm {0.0035}$ & $668 \pm {49} $ \\
+$201596316.01$ & $39.84348 \pm {0.01392}$ & $2.23 \pm {0.38}$ & $61.36 \pm {4.19}$ & $0.2126 \pm {0.0072}$ & $475 \pm {19} $ \\
+$201613023.01$ & $8.28186 \pm {0.00060}$ & $2.03 \pm {0.24}$ & $18.99 \pm {1.60}$ & $0.0786 \pm {0.0020}$ & $925 \pm {38} $ \\
+$201617985.01$ & $7.28210 \pm {0.00076}$ & $1.78 \pm {0.58}$ & $27.38 \pm {2.14}$ & $0.0573 \pm {0.0022}$ & $497 \pm {24} $ \\
+$201629650.01$ & $40.04833 \pm {0.02111}$ & $2.12 \pm {0.52}$ & $59.20 \pm {4.08}$ & $0.2153 \pm {0.0059}$ & $513 \pm {19} $ \\
+$201635569.01$ & $8.36807 \pm {0.00019}$ & $5.13 \pm {0.77}$ & $29.29 \pm {2.48}$ & $0.0636 \pm {0.0025}$ & $502 \pm {27} $ \\
+$201649426.01$ & $27.77044 \pm {0.00006}$ & $30.03 \pm {5.78}$ & $56.87 \pm {4.97}$ & $0.1523 \pm {0.0063}$ & $440 \pm {22} $ \\
+$201702477.01$ & $40.73649 \pm {0.00245}$ & $7.66 \pm {0.81}$ & $55.99 \pm {3.67}$ & $0.2239 \pm {0.0051}$ & $526 \pm {19} $ \\
+$201736247.01$ & $11.81037 \pm {0.00170}$ & $2.82 \pm {0.32}$ & $27.44 \pm {1.42}$ & $0.0936 \pm {0.0023}$ & $690 \pm {21} $ \\
+$201779067.01$ & $27.24292 \pm {0.00013}$ & $38.51 \pm {8.27}$ & $33.03 \pm {5.39}$ & $0.1784 \pm {0.0053}$ & $746 \pm {58} $ \\
+$201828749.01$ & $33.50924 \pm {0.00228}$ & $2.47 \pm {0.81}$ & $57.87 \pm {18.68}$ & $0.1903 \pm {0.0066}$ & $519 \pm {62} $ \\
+$201855371.01$ & $17.97149 \pm {0.00164}$ & $2.19 \pm {0.23}$ & $40.14 \pm {1.60}$ & $0.1169 \pm {0.0028}$ & $478 \pm {13} $ \\
+$201912552.01$\tablenotemark{1} & $32.94139 \pm {0.00292}$ & $2.24 \pm {0.25}$ & $84.27 \pm {9.54}$ & $0.1491 \pm {0.0053}$ & $271 \pm {16} $ \\
+$201929294.01$ & $5.0084 \pm {0.0001}$ & $8.77 \pm {0.70}$ & $16.11 \pm {0.87}$ & $0.0516 \pm {0.0015}$ & $844 \pm {24} $
 \enddata
 \tablecomments{These values and uncertainties are given by the mean and
 standard deviation of MCMC posterior samplings.}
