--- a/ms.tex
+++ b/ms.tex
@@ -349,7 +349,7 @@ atmospheres, which have been shown to predict near-IR colors that are too blue
 In order to try to encapsulate the effect of model uncertainties, we also run
 MCMC chains with photometric errors inflated artificially by a factor of three.
 We provide full chains using both inflated and un-inflated
-uncertainties,\footnote{http://www.astro.princeton.edu/~tdm/k2/}
+uncertainties,\footnote{\url{http://www.astro.princeton.edu/~tdm/k2/}}
 though in the rest of this work (and in Table 2) we adopt
 the results obtained using the inflated values.
 
@@ -391,7 +391,7 @@ one-dimensional spectrum are described in \citet{Bacon01} and
 Flux calibration was performed using a separate pipeline described in \citet{Mann15}.
 
 \teff\ was calculated by comparing our optical spectra with the CFIST
-suite\footnote{http://phoenix.ens-lyon.fr/Grids/BT-Settl/CIFIST2011/} of the BT-SETTL
+suite\footnote{\url{http://phoenix.ens-lyon.fr/Grids/BT-Settl/CIFIST2011/}} of the BT-SETTL
 version of the PHOENIX atmosphere models \citep{Allard13}, which gave a temperature
 of 3503 $\pm$ 60\,K.
 More details of this procedure are given in \citet{Mann14} and
