--- a/ms.tex
+++ b/ms.tex
@@ -89,8 +89,8 @@
 \newcommand{\anytodo}[1]{\todo{ANYONE}{NavyBlue}{#1}}
 
 \newcommand{\Nfp}{4}
-\newcommand{\Nvalidated}{21}
-\newcommand{\Nlimbo}{11}
+\newcommand{\Nvalidated}{22} %16 without contrast curves
+\newcommand{\Nlimbo}{10} %adds up to 36
 
 \begin{document}
 
@@ -475,7 +475,8 @@ This is Brendan.
 
 \subsection{Known Background Stars}
 The P3K AO system has a field of view of $3.84 \times 3.84$ arcseconds.
-\btmtodo{Check with Brendan to make sure he used this mode}.
+\btmtodo{Check with Brendan to make sure he used this mode (doesn't seem 
+like he did)}.
 Each \KT\ pixel is a square of $3.98 \times 3.98$ arcseconds.
 A background eclipsing binary within a few \KT\ pixels of our target
 stars could mimic a transit signal while evading detection by P3K.
