--- a/ms.tex
+++ b/ms.tex
@@ -546,7 +546,7 @@ this paper.
 Each is the product of a fiducial noise model, in which the median systematic
 has been removed for illustrative purposes.
 The systems which we validate as transiting planets are labeled in
-green.
+blue.
 The systems which we confirm as false positive events are labeled in red.
 The systems which we leave as candidates are labeled in black.
 Red curves outline the median transit model for each candidate system.
