--- a/table_bg.tex
+++ b/table_bg.tex
@@ -11,14 +11,40 @@
 \colhead{Detection Method} &
 \colhead{Separation (arcsec)} &
 \colhead{$\Delta r$ (mags)} &
-\colhead{Max Depth (ppm)}
+\colhead{Max Depth (ppt)}
 }
 \startdata
- 201295312  & 174.010158  & -2.522528  &  SDSS/AO &  $8.12 \pm 0.09$\tablenotemark{1}   & $7.10 \pm 0.10$ & 0.75 \\
- 201465501  & 176.266111  &  0.003507  &  SDSS &  $7.80 \pm 0.15$\tablenotemark{2}   & $7.90 \pm 0.25$ & 0.36 \\
- 201546283  & 171.515265  &  1.229950  &  SDSS/AO &  $2.98 \pm 0.05$\tablenotemark{1}   & $5.87 \pm 0.06$ & 2.31 \\
- 201779067  & 168.543908  &  4.986984  &  SDSS &  $5.94 \pm 0.15$\tablenotemark{2}  & $4.21 \pm 0.03$ & 10.56 \\
- 201828749  & 175.645724  &  5.894714  &   AO  &  $2.46 \pm 0.04$\tablenotemark{1}   & $ 2.0 \pm 0.1 $\tablenotemark{3} & 137  
+ 201208431  & 174.748988  & -3.902146  &  SDSS  &       $17.25 \pm 0.15\tablenotemark{1}$  & $5.90 \pm 0.12$ & 5.6 \\
+ 201257461  & 178.164376  & -3.093431  &  SDSS  &       $ 12.91 \pm 0.18\tablenotemark{1}$ & $5.04 \pm 0.03$ & 4.8 \\
+ 201295312  & 174.010158  & -2.522528  &  SDSS/AO &  $8.12 \pm 0.09$\tablenotemark{1}   & $7.10 \pm 0.10$ & 0.8 \\
+ 201338508  & 169.308176  & -1.873647  & SDSS      &    $22.92 \pm 0.07$\tablenotemark{1} & $4.35 \pm 0.03$ & 9.1 \\
+ 201367065  &                   &                       &                &                                                            &                          &            \\
+ 201384232  & 178.195303 &  -1.192501  & SDSS      &   $24.14 \pm 0.06$\tablenotemark{1} & $5.93 \pm 0.03$ & 2.1 \\
+ 201393098  &                   &                       &                &                                                           &                          &            \\
+ 201403446  & 174.267663 &  -0.909645  & SDSS      &    $9.78 \pm 0.14$\tablenotemark{1} & $4.56 \pm 0.08$ & 7.5 \\ 
+ 201445392 &                   &                       &                &                                                           &                          &            \\
+ 201465501  &                   &                       &                &                                                           &                          &            \\
+ 201505350  &                   &                       &                &                                                           &                          &            \\
+ 201546283  & 171.515265  &  1.229950  &  SDSS/AO &  $2.98 \pm 0.05$\tablenotemark{1}   & $5.87 \pm 0.06$ & 2.3 \\
+ 201549860  & 170.097556 &  1.288007    & SDSS    &    $21.21 \pm 0.05$\tablenotemark{1} & $2.26 \pm 0.03$ & 62.3 \\
+ 201555883  &                   &                       &                &                                                           &                          &            \\
+ 201565013 &                   &                       &                &                                                           &                          &            \\
+ 201569483 &                   &                       &                &                                                           &                          &            \\
+ 201577035 & 172.118116 &  1.687798    & SDSS    &  $17.19 \pm 0.12$\tablenotemark{1}  & $5.40 \pm 0.03$ & 3.5   \\
+ 201596316 &                  &                       &                &                                                           &                          &            \\
+ 201613023 &                  &                       &                &                                                           &                          &            \\
+ 201617985 &                  &                       &                &                                                           &                          &            \\
+ 201629650 & 170.158905 &  2.502107   & SDSS     & $12.30 \pm 0.14$\tablenotemark{1} &   $5.98 \pm 0.06$ & 2.0 \\
+ 201635569 &                   &                       &                &                                                           &                          &            \\
+ 201649426 &                   &                       &                &                                                           &                          &            \\
+ 201702477 & 175.238916 &  3.678764    & SDSS     &  $12.15 \pm 0.12$\tablenotemark{1} & $4.65 \pm 0.09$ & 6.9  \\
+ 201736247 &                   &                       &                &                                                           &                          &            \\
+ 201754305 &                   &                       &                &                                                           &                          &            \\
+ 201779067  &                   &                       &                &                                                           &                          &            \\
+ 201828749  & 175.645724  &  5.894714  &   AO  &        $2.46 \pm 0.04$\tablenotemark{1}   & $ 2.0 \pm 0.1 $\tablenotemark{3} & 137  \\
+ 201855371 &                   &                       &                &                                                           &                          &            \\
+ 201912552 &                   &                       &                &                                                           &                          &            \\
+ 201929294 &                   &                       &                &                                                           &                          &            
 \enddata
 \tablenotetext{1}{Separation from AO imaging}
 \tablenotetext{2}{Separation from SDSS photometry}
